syntax = "proto3";
option go_package = ",;proto";

import "google/protobuf/empty.proto";

service User{
  rpc GetUserList(PageInfo) returns (UserListResponse); //获取用户列表
  rpc GetUserById(IdRequest) returns (UserListResponse); // id查询
  rpc GetUserByMobile(MobileRequest) returns (UserListResponse); // 手机号查询
  rpc CreateUser(CreateUserInfo) returns (UserListResponse); //添加用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); //修改用户信息
  rpc CheckUserPassword(PasswordCheckInfo) returns (CheckResponse); //校验密码
}

message PasswordCheckInfo{
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse{
  bool success = 1;
}

message UpdateUserInfo{
  uint32 id = 1;
  string mobile = 2;
  string password = 3;
  string nickname = 4;
  uint64 birthDay = 5;
  string gender = 6;
  int32 role = 7;
}

message CreateUserInfo{
  string mobile = 1;
  string password = 2;
  string nickname = 3;
}

message MobileRequest{
  string mobile = 1;
}

message IdRequest{
  uint32 id = 1;
}

message PageInfo{
  uint32 pn = 1;
  uint32 pSize = 2;
}

message UserInfoResponse{
  uint32 id = 1;
  string mobile = 2;
  string password = 3;
  string nickname = 4;
  uint64 birthDay = 5;
  string gender = 6;
  int32 role = 7;

}

message UserListResponse{
  uint32 total = 1;

}